--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,59 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@1,300&display=swap');
+
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+@media screen and (max-width:600px){
+    #menuMobile_icone{
+        display: flex;
+    }
+    .caixa_menu{
+        display: none;
+    }
+    .row{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .caixa1 button{
+        position: relative;
+        top: 100px;
+    } 
+    .footer{
+        z-index: -1;
+        background-color: #e7e5e5d2;
+    }
+
+    .main{
+        height: 2100px;
+    }
+    #menuMobile_icone{
+        position: absolute;
+    }
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+@media screen and (max-width:1200px){
+    .nick {
+        top: 35%;
+    }
+    .card {
+        width: calc(50% - 10px);
+        margin: 15px;
+      }
+    }
+    @media screen and (max-width:700px){
+        .main__menu {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+          }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+          .card {
+            width: 100%;
+            margin-bottom: 15px;
+          }
+        }
